Melhoria em estilo de logo de impressões

--- a/sites/all/themes/adminimal_theme/css/style.css
+++ b/sites/all/themes/adminimal_theme/css/style.css
@@ -3681,6 +3681,9 @@ span.even{
 }
 
 /* Laudos */
+.print-logo{
+  box-shadow: none!important;
+}
 .laudo .title{
   text-align: center;
   color: #295f39;
